# notion_link_bot

./: .gitignore  README.md  pyproject.toml
tgbot/: __main__.py
tgbot/database/: __init__.py
tgbot/handlers/: __init__.py  callbacks.py  commands.py  messages.py
tgbot/keyboards/: __init__.py
tgbot/models/: __init__.py
tgbot/nlp/: __init_.py
tgbot/services/: notion_client.py  source_detection.py  title_extractor.py
tgbot/states/: __init__.py  all_states.py  user_states.py
tgbot/utils/: __init__.py  notion_client.py
