[project]
name = "notion-link-bot"
version = "0.1.0"
description = "A Telegram Bot that automates Notion links' processes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15.0",
    "betterlogging>=1.0.0",
    "notion-client>=2.2.1",
    "orjson>=3.10.12",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
