[project]
name = "notion-link-bot"
version = "0.1.0"
description = "A Telegram Bot that automates Notion links' processes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15.0",
    "betterlogging>=1.0.0",
    "notion-client>=2.2.1",
    "orjson>=3.10.12",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.3",
    "urllib3>=2.2.3",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.1",
]
